# SPDX-FileCopyrightText: 2023 Oxhead Alpha
# SPDX-License-Identifier: LicenseRef-MIT-OA

[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tezos-baking"
authors = [
  { name = "Serokell", email = "tezos-packaging@serokell.io" },
]
description = "Package that provides systemd services that orchestrate other services from Tezos packages"
license = { text = "LicenseRef-MIT-OA" }
requires-python = ">=3.8"
readme = "README.md"
version = "v22.0a"

[tool.setuptools.packages.find]
where= ["src"]

[project.scripts]
tezos-setup = "tezos_baking.tezos_setup_wizard:main"
tezos-vote = "tezos_baking.tezos_voting_wizard:main"
