# SPDX-FileCopyrightText: 2023 Oxhead Alpha
# SPDX-License-Identifier: LicenseRef-MIT-OA

[metadata]
name = tezos-baking
author = Serokell
author_email = tezos-packaging@serokell.io
description = Package that provides systemd services that orchestrate other services from Tezos packages
license = LicenseRef-MIT-OA

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  tezos-setup = tezos_baking.tezos_setup_wizard:main
  tezos-vote = tezos_baking.tezos_voting_wizard:main

[tox:tox]
env_list =
  py38
  type
